2014-08-18 Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_arrows) src/graph3d.c (place_arrows3d):
	Only invoke the arrowheads only code if there really is an arrowhead.

2014-08-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/mingw/Makefile (VPATH): Drop $W from VPATH.  Necessary to
	avoid circular dependency on wgnuplot.mnu
	(%.$(O)): Use pattern rule instead of VPATH to build Windows
	source files.
	(VERSIONING): Avoid inverted logic in makefile conditional.
	(console, windows, pipes): Simplify by letting the default rule in
	the sub-make handle things.
	(default, all): Versioning is really needed by $(TARGET) rule,
	so let that handle constructing it.
	($(TARGET)): Do VERSIONING first, drop dependencies on icon files.
	(%.o): Use pattern rules to build Qt source files.  Much simpler
	than spelling it out long hand for every single source file.

2014-08-15 Ethan A Merritt  <merritt@u.washington.edu>

	* src/bf_test.c src/Makefile.am src/binary.* (removed)
	config/makefile.os2 config/makefile.dj2 config/makefile.cyg
	config/cygwin/Makefile config/mingw/Makefile config/msvc/Makefile:
	Remove bf_test dependence on all other gnuplot files and libraries.
	This makes binary.c and binary.h superfluous.
	Bugs #1412 #1451

	* src/makefile.all src/makefile.awc: Remove mention of binary.o

	* config/*/Makefile: Remove alloc and binary from bf_test dependencies

	* src/graphics.c (place_objects) src/set.c (set_obj):
	Apply default rectangle style at the time of a "set object rect"
	command rather than waiting until the rectangle is drawn.  This prevents
	the default style line/dash settings from overriding explicit rectangle
	commands.
	Bug #1460

	* src/save.c (save_linetype):  Bugfix - dashtype was being saved only if
	there was also a point type.

	* src/gadgets.c (apply_pm3dcolor):  Don't clobber current dashtype by
	calling term->linetype(LT_BLACK).  Call term->set_color(BLACK_COLORSPEC)
	instead.
